apps/base/stirling-pdf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - pdf.bacherik.de
    secretName: pdf-tls
  rules:
  - host: "pdf.bacherik.de"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stirling-pdf-stirling-pdf-chart
            port:
              number: 80
